--- a/src/TaskTracker.Services.Tasks/TaskTracker.Services.Tasks.csproj
+++ b/src/TaskTracker.Services.Tasks/TaskTracker.Services.Tasks.csproj
@@ -7,13 +7,17 @@
   <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="RawRabbit" Version="2.0.0-beta8" />
+    <PackageReference Include="RawRabbit.DependencyInjection.ServiceCollection" Version="2.0.0-beta8" />
+    <PackageReference Include="RawRabbit.Operations.Publish" Version="2.0.0-beta8" />
+    <PackageReference Include="RawRabbit.Operations.Subscribe" Version="2.0.0-beta8" />
   </ItemGroup>
-
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
   </ItemGroup>
-
+  <ItemGroup>
+    <ProjectReference Include="..\TaskTracker.Common\TaskTracker.Common.csproj" />
+  </ItemGroup>
 </Project>
