--- a/tests/TaskTracker.Services.Identity.Test/TaskTracker.Services.Identity.Test.csproj
+++ b/tests/TaskTracker.Services.Identity.Test/TaskTracker.Services.Identity.Test.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="4.19.4" />
+    <PackageReference Include="JWT" Version="4.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0-preview-20170628-02" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.0.0" />
     <PackageReference Include="Moq" Version="4.7.142" />
