--- a/src/TaskTracker.Api/appsettings.json
+++ b/src/TaskTracker.Api/appsettings.json
@@ -11,5 +11,10 @@
         "Default": "Warning"
       }
     }
-  }
+  },
+  "Audience": {
+    "Key": "veryVerySecretKey",
+    "Issuer": "http://localhost:5000/",
+    "Aud": "Wow Team"
+ }
 }
