--- a/src/TaskTracker.Services.Identity/appsettings.Development.json
+++ b/src/TaskTracker.Services.Identity/appsettings.Development.json
@@ -6,5 +6,10 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "Jwt": {
+    "Key": "veryVerySecretKey",
+    "Issuer": "http://localhost:5000/",
+    "Aud": "Wow Team"
+ }
 }
