--- a/src/TaskTracker.Services.Identity/TaskTracker.Services.Identity.csproj
+++ b/src/TaskTracker.Services.Identity/TaskTracker.Services.Identity.csproj
@@ -15,10 +15,12 @@
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
   </ItemGroup>
-
+  
+  <ItemGroup>
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
+  </ItemGroup>
+  
   <ItemGroup>
     <ProjectReference Include="..\TaskTracker.Common\TaskTracker.Common.csproj" />
   </ItemGroup>
-
-
 </Project>
